[package]
name = "sol-tool"
version = "0.1.0"
edition = "2021"
description = "Solana Tool"
license = "Apache-2.0"
authors = ["lihongjie arsenallihongjie<@gmail.com>"]
keywords = ["solana", "tool"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.10"
rocket_cors = "0.5.2"
serde = "1.0.130"
serde_json = "1.0.64"
serde_derive = "1.0.126"
anyhow = "1.0.32"
solana-sdk = "1.17.13"
solana-client = "1.17.13"
solana-transaction-status = "1.17.13"
solana-program = "1.17.13"
serum_dex = { version = "0.5.10", git = "https://github.com/raydium-io/openbook-dex", features=["no-entrypoint", "program"] }
uint="0.9.5"
bincode = { version = "1.3.3" }
base64 = "0.13.0"
arrayref = "0.3.6"
arrform = { git = "https://github.com/raydium-io/arrform" }
num-derive = "0.3"
num-traits = "0.2.12"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "2.2.0", features = ["no-entrypoint"]}
thiserror = "1.0.20"
safe-transmute = "0.11.0"
bytemuck = { version = "1.4.0" }
#rpc client
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }



